# macropol-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.md  lib.rs
tests/: use_unstringify.rs
